# ERP_Porject

./: .env.example  .gitignore  README.md  TODO.md  alembic.ini  pyproject.toml  ruff.toml
.zed/: settings.json
alembic/: env.py
alembic/versions/: 0fe77cacbb6e_update_client_user.py  290e24f310fa_payment_license_transation_reference.py  33e0722ac969_fix_exipre_date_on_license.py  580c318df6c0_finance_paymentlicense_and_.py  a706e408ebfb_update_license_plan_id_to_better_name.py  ae01eef068f8_update_plan_and_license.py  dc2cc55d2c99_payment_license_transation_reference.py  e1074e0b5e1f_optional_max_clients_in_partnerplan.py  e2c1de7ed73d_initial_migration.py  f2683ccb8a70_fix_start_date_on_license.py  f40ceb164af7_add_price_to_erp_and_partner_plan.py  f6c8defb4c6b_update_enums.py
app/: config.py  constants.py  database.py  exceptions.py  main.py  models.py
app/auth/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py  utils.py
app/core/: logger.py  mail.py  scheduler.py  upload_utils.py
app/finance/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
app/license/: config.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
app/plan/: exceptions.py  models.py  router.py  schemas.py  service.py
app/user/: exceptions.py  router.py  schemas.py  service.py  utils.py
scripts/: generate_key_pairs.py
templates/email/: request_email_change.html  reset_password.html  verify_email.html  welcome.html
